# RicetteRandom

./: .gitignore  CMakeLists.txt  README.md  a.out  dowloadRecipes.go  downloadRecipes.go  go.mod  out.txt  test.cc
GialloZafferanoUtils/: utils.go
gialloZafferanoUtils/: utils.go
include/: CookBook.h  Recipe.h  Window.h  WindowManager.h  XmlRecipeDeserializer.h
src/: Recipe.cpp  Window.cpp  WindowManager.cpp  XmlRecipeDeserializer.cpp  ricetterandom.cpp  ricetterandom_utils.cpp
